<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/size_10"
    android:layout_marginTop="@dimen/size_10"
    android:layout_marginEnd="@dimen/size_10"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_quechktitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="@dimen/font_18" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/size_5"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/radiog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_10"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rd1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@drawable/checkboxtintgreen"
                android:text="@string/yes" />

            <RadioButton
                android:id="@+id/rd2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@drawable/checkboxtintgreen"
                android:text="@string/no" />

            <RadioButton
                android:id="@+id/rd3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@drawable/checkboxtintgreen"
                android:text="@string/nna" />

        </RadioGroup>

    </LinearLayout>
    <!--
                   <RadioButton
                       android:id="@+id/chk_yn"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:button="@drawable/checkboxtintgreen" />
           -->
    <!--<CheckBox
        android:id="@+id/chk_yn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:button="@drawable/checkboxtintgreen" />-->
</LinearLayout>