<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.Splash">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/back_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/sc01" />

        <ImageView
            android:id="@+id/logosc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/back_one"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="-95dp"
            android:elevation="15dp"
            android:gravity="center"
            android:src="@drawable/athenamain" />

        <TextView
            android:id="@+id/text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logosc"
            android:layout_marginTop="@dimen/size_40"
            android:gravity="center"
            android:text="@string/constructiondailyreports"
            android:textColor="@color/black"
            android:textSize="@dimen/font_20"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text1"
            android:layout_marginTop="@dimen/size_5"
            android:gravity="center"
            android:text="@string/andfeildmanagement"
            android:textColor="@color/black"
            android:textSize="@dimen/font_20"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text2"
            android:layout_marginTop="@dimen/font_15"
            android:gravity="center"
            android:text="@string/getingetitdonegethome"
            android:textColor="@color/black"
            android:textSize="@dimen/font_15"
            android:textStyle="normal" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>