<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_50"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_close"
                android:layout_width="@dimen/size_25"
                android:layout_height="@dimen/size_25"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/size_10"
                android:background="@drawable/cose"
                android:backgroundTint="@color/white" />

            <TextView
                android:id="@+id/txt_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/selectcontractor"
                android:textColor="@color/white"
                android:textSize="@dimen/font_16"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_done"
                android:layout_width="@dimen/size_80"
                android:layout_height="@dimen/size_40"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/size_5"
                android:background="@drawable/squrcornerradius"
                android:text="@string/done"
                android:textColor="@color/colorPrimary" />

        </LinearLayout>


        <EditText
            android:id="@+id/quantity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/size_20"
            android:gravity="top"
            android:hint="@string/enterquantity"
            android:inputType="number"
            android:padding="10dp"
            android:scrollbars="vertical"
            android:textSize="@dimen/font_18"
            android:visibility="gone" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcv_member"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>