<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/size_7"
        android:padding="@dimen/size_5"
        card_view:cardBackgroundColor="@android:color/white"
        card_view:cardCornerRadius="5dp"
        card_view:cardElevation="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_7"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/placeordericon"
                android:layout_width="@dimen/size_35"
                android:layout_height="@dimen/size_30"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="@dimen/size_10"
                android:src="@drawable/report" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/placeordericon"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="@dimen/size_5">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/date1"
                            android:textColor="@color/black"
                            android:textSize="@dimen/font_16" />

                        <TextView
                            android:id="@+id/txt_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/size_10"
                            android:text="@string/date"
                            android:textColor="@color/black"
                            android:textSize="@dimen/font_16" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/size_5"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/totalworkhours"
                            android:textColor="@color/black"
                            android:textSize="@dimen/font_14" />

                        <TextView
                            android:id="@+id/txt_totalwrkhr"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/size_10"
                            android:text="@string/name"
                            android:textColor="@color/black"
                            android:textSize="@dimen/font_14" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/size_5"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rate"
                            android:textColor="@color/black"
                            android:textSize="@dimen/font_14" />

                        <TextView
                            android:id="@+id/txt_rate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/size_10"
                            android:text="@string/name"
                            android:textColor="@color/black"
                            android:textSize="@dimen/font_14" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/size_3"
                            android:text="/hr."
                            android:textColor="@color/gray"
                            android:textSize="@dimen/font_14" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/size_5"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/payment"
                            android:textColor="@color/black"
                            android:textSize="@dimen/font_14" />

                        <TextView
                            android:id="@+id/mny"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/size_10"
                            android:text="\u00a3 "
                            android:textColor="@color/green"
                            android:textSize="@dimen/font_14" />

                        <TextView
                            android:id="@+id/txt_payment"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/name"
                            android:textColor="@color/green"
                            android:textSize="@dimen/font_14" />

                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>